@@ -262,6 +262,201 @@ static void form_tentative_p (ivector *vertices,
     }
 }
 
+
+
+/**
+ * \fn static void pairwise_aggregation (dCSRmat *A, 
+ *                                       ivector *vertices, 
+ *                                       INT *num_aggregations)
+ *
+ * \brief Form aggregation based on pairwise matching 
+ *
+ * \param A                 Pointer to the coefficient matrices
+ * \param vertices          Pointer to the aggregation of vertics
+ * \param num_aggregations  Pointer to number of aggregations 
+ * 
+ * \author Xiaoping Li, Chensong Zhang
+ * \date   04/21/2014
+ *
+ */
+static void pairwise_aggregation(const dCSRmat * A,
+                                 ivector *vertices,
+                                 INT *num_aggregations)
+{
+    INT row  = A->row;
+    INT *AIA = A->IA;
+    INT *AJA = A->JA;
+    REAL *Aval = A->val;
+    INT i, j, row_start, row_end;
+    REAL sum;
+
+    INT k_tg = 6.75;
+
+    /*---------------------------------------------------------- */
+    /* Step 1.select very strong diagnoal dominate row (vertices)*/ 
+	/*        and store in G0.                                   */
+    /*-----------------------------------------------------------*/
+
+    /* G0 : vertices->val[i] =-5 Remain: vertices->val[i] =-1 */
+
+    fasp_ivec_alloc(row, vertices);
+    	
+    for( i = 0; i < row; i++ )
+    {
+        sum = 0.0;
+        row_start = AIA[i]; 
+        row_end = AIA[i+1];
+
+        for ( j = row_start+1; j < row_end; j++) sum += ABS(Aval[j]);
+        
+        if( Aval[AIA[i]] >= ((k_tg+1.)/(k_tg-1.))*sum) {
+            vertices->val[i] = -5;
+        }
+        else {
+            vertices->val[i] = -1;
+        }
+    }
+    
+    /*-------------------------------------------------------*/
+    /* Step 2. computate row sum (off-diagonal) for each vertice*/
+    /*-------------------------------------------------------*/
+    REAL *s;
+
+    s = (REAL *)fasp_mem_calloc(row, sizeof(REAL));
+
+    for (i=0; i<row; i++)
+    {
+        s[i] = 0.0;
+        row_start = AIA[i];
+		row_end = AIA[i+1];
+
+        if (vertices->val[i] == -5) continue;
+
+        for ( j = row_start + 1; j < row_end; j++ ) s[i] -= Aval[j];
+    }
+
+    /*------------------------------------------*/
+    /* Step 3. start the pairwise aggregation   */
+    /*------------------------------------------*/
+    REAL miu;
+    REAL min_miu;
+    REAL aii;
+    REAL ajj;
+    REAL aij;
+    INT  col,index;
+
+    /* temp var for comput miu */
+    REAL temp1, temp2, temp3, temp4;
+    
+    *num_aggregations = 0;
+
+    for( i = 0; i < row; i++ )
+    {
+        if( vertices->val[i] != -1) continue;
+        
+        aij = 0.0;
+        min_miu = 1000.;
+        
+        row_start = AIA[i]; row_end = AIA[i+1];
+        
+        aii = Aval[row_start];
+        
+        for ( j= row_start + 1; j < row_end; j++ )
+        {
+            col = AJA[j];
+            if( vertices->val[col] != -1 ) continue;
+            
+            aij = Aval[j];
+            ajj = Aval[AIA[col]];
+            
+            temp1 = aii+s[i]+2*aij; temp2 = ajj+s[col]+2*aij;
+            
+            temp2 = 1.0/temp1+1.0/temp2; 
+            
+            temp3 = aii-s[i]; 
+			// avoid temp3 to be zero
+			temp3 = MAX(temp3, SMALLREAL);
+            
+            temp4 = ajj-s[col];
+			// avoid temp4 to be zero
+			temp4 = MAX(temp4, SMALLREAL);
+            
+            temp4 = -aij+1./(1.0/temp3+1.0/temp4); 
+            
+            miu=(-aij+1.0/temp2) / temp4;
+
+            if(min_miu>miu)
+            {
+                min_miu=miu;
+                index=col;
+            }
+        }
+        
+        *num_aggregations += 1;
+        if( min_miu <= k_tg )
+        {
+            vertices->val[i] = *num_aggregations - 1;
+            vertices->val[index] = *num_aggregations - 1;
+        }
+		else
+        {
+            vertices->val[i]= *num_aggregations - 1;
+        }
+    }
+
+    fasp_mem_free(s);
+}
+
+#if 0
+
+/**
+ * \fn void aggregation_coarsening (dCSRmat *A, ivector *vertices, AMG_param *param, 
+ *                               INT levelNum, dCSRmat *Neigh, INT *num_aggregations)
+ *
+ * \brief AMG coarsening based on aggregation
+ *
+ * \param A                 Pointer to the coefficient matrices
+ * \param vertices          Pointer to the aggregation of vertics
+ * \param param             Pointer to AMG parameters
+ * \param levelNum          Level number
+ * \param Neigh             Pointer to strongly coupled neighborhoods
+ * \param num_aggregations  Pointer to number of aggregations 
+ * 
+ * \author Xiaoping Li, Chensong Zhang
+ * \date   04/21/2014
+ *
+ */
+
+void aggregation_coarsening (dCSRmat *A,
+		                      ivector *vertices,
+						      AMG_param *param, 
+                              INT levelNum,
+						      dCSRmat *Neigh,
+						      INT *num_aggregations)
+{
+    INT agg_type = AMG_param->aggregation_type;
+
+    switch (agg_type)
+    {
+        case PAIRWISE: 
+            // pairwise aggregation
+			// A should diagnoal preference
+            fasp_dcsr_diagpref(A);
+            pairwise_aggregation(A, vertices, num_aggregations);
+            break;
+
+        case VMB:
+            // VMB aggregation
+			aggregatation(A, vertices, param, levelNum, Neigh, num_aggregations);
+            break;
+
+        default:
+            printf("### Warnning: No such aggregation type!\n");
+            exit(0);
+	}
+}
+#endif
+
 /*---------------------------------*/
 /*--        End of File          --*/
 /*---------------------------------*/
